Upgrade build target from Java 11 to Java 17
Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>